@@ -1,3 +1,9 @@
+2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* gsearchtool-callbacks.c:  Apply fix based on patch from
+	Hidetoshi Tajima (hidetoshi.tajima@sun.com) for bug report
+	122402. (http://bugzilla.gnome.org/show_bug.cgi?id=122402)
+
 2003-08-23  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gnome-search-tool.schemas, gsearchtool.c:  Clean up gconf
